changed 'please hire me' to 'contact'

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					</div>
 					<div class="col-sm-3"> 
 						<a href='mailto: j.friedman@rutgers.edu'> <i class="fa fa-handshake-o"></i> </a>
-						<p class="description">please hire me</p>
+						<p class="description">contact</p>
 					</div>
 				</div>
 			</div>
