--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<div class="row vertical-center-row"></div>
 				<div class="col-sm-12 center">
 					<h1>Yoni Friedman </h1>
+                    <h2> Lab Manager / Research Assistant: <a href='www.cocosci.mit.edu'> MIT Computational Cognitive Science Lab </a></h2>
 					<code> <div class="typewriter"> Deep, Descriptive, Adjectives </div> </code>
 				</div>
 	
